--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <img src="./img/photos/photo6.jpg" class="polaroid rotate-right">
     <img src="./img/photos/photo5.jpg" class="polaroid rotate-left">
     <img src="./img/photos/photo4.jpg" class="polaroid rotate-right">
+    <img src="./img/photos/photo3.jpg" class="polaroid rotate-left">
+    <img src="./img/photos/photo7.jpg" class="polaroid rotate-right">
     <!-- Add or duplicate more images as needed -->
   </div>
 </div>
